--- a/web/app/themes/osmedicine/assets/styles/main.scss
+++ b/web/app/themes/osmedicine/assets/styles/main.scss
@@ -46,7 +46,7 @@
 @import "common/utility";
 @import "common/global";
 @import "common/page";
-@import "components/buttons";
+//@import "components/buttons";
 @import "components/fonts";
 @import "components/comments";
 @import "components/forms";
