subsite mast-head

--- a/web/app/themes/osmedicine/assets/styles/layouts/_header.scss
+++ b/web/app/themes/osmedicine/assets/styles/layouts/_header.scss
@@ -1134,11 +1134,11 @@ aside {
     margin-top: 1.5rem;
     font-family: Open Sans, "Helvetica", "Arial";
     >h3 {
-        background: rgb(245, 245, 245) none repeat scroll 0% 0%;
-        margin-bottom: 1.5rem;
+        background: #808080 none repeat scroll 0 0;
         line-height: 1;
         padding: 2%;
         font-size: 1.3rem;
+        color: #fff;
     }
     >ul {
         list-style: outside none none;
