--- a/web/app/themes/osmedicine/assets/styles/layouts/_header.scss
+++ b/web/app/themes/osmedicine/assets/styles/layouts/_header.scss
@@ -531,7 +531,7 @@ body.single-post .wrap.container {
     >.content.row {
 .main {
 @include media-query(lap-and-up) {
-             width:auto;
+             width:100%;
              padding:0 10%
             }
         }}}
