--- a/web/app/themes/osmedicine/assets/styles/main.scss
+++ b/web/app/themes/osmedicine/assets/styles/main.scss
@@ -54,6 +54,7 @@
 @import "components/menu";
 @import "components/post";
 @import "components/select";
+@import "components/header-firstrow";
 @import "components/wp-classes";
 @import "components/headings";
 @import "layouts/header";
