--- a/web/app/themes/osmedicine/assets/styles/main.scss
+++ b/web/app/themes/osmedicine/assets/styles/main.scss
@@ -60,6 +60,7 @@
 @import "layouts/header";
 @import "layouts/footer";
 @import "layouts/tinymce";
+@import "layouts/allegati";
 @import "module/restricted-area";
 @import "module/sidebar-widgets";
 @import "module/single-post";
