--- a/web/app/themes/osmedicine/assets/styles/components/_header-firstrow.scss
+++ b/web/app/themes/osmedicine/assets/styles/components/_header-firstrow.scss
@@ -55,7 +55,7 @@
             background-color: rgb(255, 255, 255);
             left: 0;
             >li {
-                padding: 2px 5%;
+                padding: 2px 10px;
                 display: block;
                 &.active{
                   background-color: #86c9e9;
