--- a/web/app/themes/osmedicine/assets/styles/module/_sidebar-widgets.scss
+++ b/web/app/themes/osmedicine/assets/styles/module/_sidebar-widgets.scss
@@ -6,10 +6,10 @@ aside {
         left: 50%;
         transform: translateX( -50%);
         width: 100%;
-        margin-bottom: 1.5rem;    
-    border: 1px solid #ddd;    
+        margin-bottom: 1.5rem;
+    border: 1px solid #ddd;
     box-shadow: 0 1px 2px -1px #ccc;
-    
+
     }
     .upme-login-widget {
         margin-bottom: 1.5rem;
@@ -180,7 +180,8 @@ body.virology{
             padding: 0 8%;
         }
         > img {
-            max-width: 300px;
+            width: 300px;
+            max-width: 100%;
             margin: 1rem auto;
             display: block;
         }
@@ -192,7 +193,7 @@ body.virology{
         left: 50%;
         transform: translateX(-50%);
         max-width: 100%;
-        border: 1px solid #ddd;        
+        border: 1px solid #ddd;
         box-shadow: 0 1px 2px -1px #ccc;
         width: 100%;
         background-color: #534741;
