--- a/web/app/themes/osmedicine/assets/styles/module/_restricted-area.scss
+++ b/web/app/themes/osmedicine/assets/styles/module/_restricted-area.scss
@@ -186,3 +186,13 @@
         margin-bottom: 1rem;
     }
 }
+
+.osmedicine-terms{
+    margin: .5rem 0;
+    li{list-style:none;}
+    p{font-size:14px !important;}
+    p,li{margin: 3px 0;}
+}
+.upme-separator-collapse-icon{
+    display:none;
+}
