--- a/web/app/themes/osmedicine/assets/styles/components/_post.scss
+++ b/web/app/themes/osmedicine/assets/styles/components/_post.scss
@@ -204,3 +204,8 @@ body.author {
         margin-bottom: 0.5rem;
     }
 }
+
+.hcv-cat-bg-color{
+  color: #fff !important;
+  > a{ color: #fff !important }
+}
