--- a/web/app/themes/osmedicine/assets/styles/layouts/_allegati.scss
+++ b/web/app/themes/osmedicine/assets/styles/layouts/_allegati.scss
@@ -1,4 +1,4 @@
-.allegati{
+.post-type-archive-allegati{
 	table{width:100%;}
 	td{ vertical-align: top; }
 	time{ font-size:2rem; display: block;
@@ -14,6 +14,20 @@ color: rgb(38, 92, 131);
 			margin-bottom:1rem;
 		}
 	}
+  .years-list-wrapper{
+    border-top: 1px solid rgb(38, 92, 131);
+    border-bottom: 1px solid rgb(38, 92, 131);
+    margin-bottom: 1rem;
+    .years-list{
+    margin: 0px;
+    padding: 5px 0px;
+      >li{
+      display: inline-block;
+      list-style: none;
+      margin-right: 10px;
+      }
+    }
+  }
 	.allegato_category{
 		font-size:1.5rem;
 		color:#fff;
