--- a/web/app/themes/osmedicine/assets/styles/module/_restricted-area.scss
+++ b/web/app/themes/osmedicine/assets/styles/module/_restricted-area.scss
@@ -17,11 +17,11 @@
     border: 1px solid rgb(221, 221, 221);
     box-shadow: 0px 1px 2px -1px rgb(204, 204, 204);
     background-color: rgb(255, 255, 255);
-    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     font-family: Open Sans, "Helvetica", "Arial";
     >h3 {
         background: rgb(245, 245, 245) none repeat scroll 0% 0%;
-        margin-bottom: 1.5rem;
+        
         line-height: 1;
         padding: 2%;
         font-size: 1.3rem;
@@ -121,6 +121,8 @@
     >li>span {
         margin-bottom: 0.5rem;
         display: inline-block;
+            &:last-child{background-color: #fff;
+    padding: 2px 10px;}
     }
 }
 
@@ -195,4 +197,11 @@
 }
 .upme-separator-collapse-icon{
     display:none;
+}
+.registered-areas{
+    background-color: rgba(0, 169, 157, 0.62);
+    color: #fff;
+    >h4{
+        color:#fff;
+    }
 }
