--- a/web/app/themes/osmedicine/assets/styles/module/_sidebar-widgets.scss
+++ b/web/app/themes/osmedicine/assets/styles/module/_sidebar-widgets.scss
@@ -176,7 +176,7 @@ button.upme-button, div.upme-widget-wrap a.upme-button, input.upme-button[type="
     }
 }
 
-body.virology{
+body.subsite{
     .widget_siw_widget{
         >h3{
             text-align: center;
